2011-07-05 Ian Rutt
 * glide_temp.F90: removed pair of calls to timeders. Duplication of these (also in glide.F90, time step part 3) 
   means that a zero time derivative of surface and thickness was being used in the thermal calculation.

2011-07-04 Ian Rutt
 * Various files: formatting changes for ease of comparison with stable
   1.6
 * example-drivers/simple_glide/src/simple_glide.F90: results filename is
   now trimmed
 * scripts/glide_launch.py: adjusted to work with Makefile in EISMINT 2
   case. Details copied from stable 1.6 branch.

2010-09-21 Magnus Hagdorn
 * example-drivers/eis/src/Makefile.am: find include file
 * libglint/Makefile.am: ditto

2010-07-19 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: add new option
 * progs/plotGCvar: add option to overlay plot with ice thickness mask

2010-07-19 Magnus Hagdorn
 * extra_rules.am: add rules to do some more plotting
 * PyGC/PyGC/IO/GC_loadfile.py: fix bug with temperature profile in lithosphere
 * PyGC/progs/plotGCSpot: add program to plot vertical profiles at a particular
   location
 * PyGC/progs/Makefile.am: distribute new program
 * example-drivers/eis/fenscan/Makefile.am: do some more plotting

2010-07-19 Magnus Hagdorn
 * extra_rules.am: add rules to do some more plotting
 * PyGC/progs/plotGCSpotTS: add program to plot variable at one location through
   time
 * PyGC/progs/Makefile.am: distribute new program
 * extensions/erosion/scripts/Makefile.am: ditto
 * example-drivers/eis/fenscan/Makefile.am: do some more plotting
 
2010-07-13 Magnus Hagdorn
 * extra_rules.am: add rules to do some more plotting
 * PyGC/PyGC/GC_colourmap.py: fix path to colourmaps when run from source dir
 * example-drivers/eis/fenscan/Makefile.am: do some more plotting
 * extensions/erosion/scripts/plotGCSedsProfile: new program to plot a
   sediment profile
 
2010-07-09 Magnus Hagdorn
 * extra_rules.am: add macro to plot sediments
 * example-drivers/eis/fenscan/Makefile.am: plot final sediment thickness