@@ -410,7 +410,6 @@ contains
          model%geometry% thck,      &
          model%climate%  acab,      &
          .true.,                    &
-         model%numerics%thklim,     &
          model%geometry% dom,       &
          model%geometry% mask,      &
          model%geometry% totpts,    &
