@@ -3,7 +3,7 @@
 module glide_thckmask
    implicit none
 contains
-  subroutine glide_maskthck(thck,massb,include_adjacent,thklim,dom,pointno,totpts,empty)
+  subroutine glide_maskthck(thck,massb,include_adjacent,dom,pointno,totpts,empty)
     
     !*FD Calculates the contents of the mask array.
 
@@ -18,8 +18,6 @@ contains
     logical,                intent(in)  :: include_adjacent 
     !*FD If true, points with no ice but that are adjacent to points with ice 
     !*FD are included in the mask
-    real(dp),               intent(in)  :: thklim
-    !*FD Ice dynamics thickness limit, set to 0 to include all ice.
     integer, dimension(:),  intent(out) :: dom        
     integer, dimension(:,:),intent(out) :: pointno    !*FD Output mask
     integer,                intent(out) :: totpts     !*FD Total number of points
@@ -93,7 +91,7 @@ contains
       if (.not. include_adjacent) then
         ! Include only points with ice in the mask
 
-        if ( ca(2,2) > thklim .or. cb > thklim) then
+        if ( ca(2,2) > 0.0d0 .or. cb > 0.0d0) then
           thckcrit = .true.
         else
           thckcrit = .false.
@@ -105,7 +103,7 @@ contains
         ! or the mass balance is positive, thckcrit is .true.
         ! This means that the mask includes points that have no
         ! ice but are adjacent to points that do have ice
-        if ( any((ca(:,:) > thklim)) .or. cb > thklim ) then
+        if ( any((ca(:,:) > 0.0d0)) .or. cb > 0.0d0 ) then
           thckcrit = .true.
         else
           thckcrit = .false.
